package com.notifications.animations;

public enum AnimationType {
    FADE,
    SLIDE,
    POPUP
}
