@startuml

title __ANIMATIONS's Class Diagram__\n

  namespace com.notifications.animations {
    class com.notifications.animations.AnimationProvider {
        - animationsList : List<TrayAnimation>
        + AnimationProvider()
        + addAll()
        + findFirstWhere()
        + get()
        + where()
    }
  }
  

  namespace com.notifications.animations {
    enum AnimationType {
      FADE
      POPUP
      SLIDE
    }
  }
  

  namespace com.notifications.animations {
    class com.notifications.animations.FadeAnimation {
        - dismissAnimation : Timeline
        - showAnimation : Timeline
        - sq : SequentialTransition
        - trayIsShowing : boolean
        + FadeAnimation()
        + getAnimationType()
        + isShowing()
        + playDismissAnimation()
        + playSequential()
        + playShowAnimation()
        - setupDismissAnimation()
        - setupShowAnimation()
    }
  }
  

  namespace com.notifications.animations {
    class com.notifications.animations.PopupAnimation {
        - dismissAnimation : Timeline
        - showAnimation : Timeline
        - sq : SequentialTransition
        - trayIsShowing : boolean
        + PopupAnimation()
        + getAnimationType()
        + isShowing()
        + playDismissAnimation()
        + playSequential()
        + playShowAnimation()
        - setupDismissAnimation()
        - setupShowAnimation()
    }
  }
  

  namespace com.notifications.animations {
    class com.notifications.animations.SlideAnimation {
        - dismissAnimation : Timeline
        - showAnimation : Timeline
        - sq : SequentialTransition
        - trayIsShowing : boolean
        + SlideAnimation()
        + getAnimationType()
        + isShowing()
        + playDismissAnimation()
        + playSequential()
        + playShowAnimation()
        - setupDismissAnimation()
        - setupShowAnimation()
    }
  }
  

  namespace com.notifications.animations {
    interface com.notifications.animations.TrayAnimation {
        {abstract} + getAnimationType()
        {abstract} + isShowing()
        {abstract} + playDismissAnimation()
        {abstract} + playSequential()
        {abstract} + playShowAnimation()
    }
  }
  

  com.notifications.animations.FadeAnimation .up.|> com.notifications.animations.TrayAnimation
  com.notifications.animations.FadeAnimation o-- com.notifications.models.CustomStage : stage
  com.notifications.animations.PopupAnimation .up.|> com.notifications.animations.TrayAnimation
  com.notifications.animations.PopupAnimation o-- com.notifications.models.CustomStage : stage
  com.notifications.animations.SlideAnimation .up.|> com.notifications.animations.TrayAnimation
  com.notifications.animations.SlideAnimation o-- com.notifications.models.CustomStage : stage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
